@@ -3,7 +3,6 @@ package uk.gov.companieshouse.certificates.orders.api.validator;
 import uk.gov.companieshouse.certificates.orders.api.model.Visitor;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.function.Predicate;
@@ -27,11 +26,13 @@ public class FindByValueVisitor implements Visitor<Map<String, Object>> {
 
         keys.addAll(map.entrySet().stream()
                 .sorted(Map.Entry.comparingByKey())
-                .filter(predicate::test)
-                .collect(Collectors.toList()));
+                .filter(predicate)
+                .toList());
     }
 
     public List<String> getKeys() {
-        return Collections.unmodifiableList(keys.stream().map(Map.Entry::getKey).collect(Collectors.toList()));
+        return keys.stream()
+                    .map(Map.Entry::getKey)
+                .collect(Collectors.toList());
     }
 }
