@@ -13,8 +13,13 @@ import java.util.List;
 
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.core.Is.is;
-import static uk.gov.companieshouse.certificates.orders.api.model.ProductType.*;
-import static uk.gov.companieshouse.certificates.orders.api.util.TestConstants.*;
+import static uk.gov.companieshouse.certificates.orders.api.model.ProductType.CERTIFICATE;
+import static uk.gov.companieshouse.certificates.orders.api.model.ProductType.CERTIFICATE_ADDITIONAL_COPY;
+import static uk.gov.companieshouse.certificates.orders.api.model.ProductType.CERTIFICATE_SAME_DAY;
+import static uk.gov.companieshouse.certificates.orders.api.util.TestConstants.SAME_DAY_EXTRA_CERTIFICATE_DISCOUNT;
+import static uk.gov.companieshouse.certificates.orders.api.util.TestConstants.SAME_DAY_INDIVIDUAL_CERTIFICATE_COST;
+import static uk.gov.companieshouse.certificates.orders.api.util.TestConstants.STANDARD_EXTRA_CERTIFICATE_DISCOUNT;
+import static uk.gov.companieshouse.certificates.orders.api.util.TestConstants.STANDARD_INDIVIDUAL_CERTIFICATE_COST;
 
 /**
  * Unit/integration tests the {@link CertificateCostCalculatorService} class.
@@ -42,17 +47,17 @@ class CertificateCostCalculatorServiceTest {
         // Given and when
         final CertificateCostCalculation calculation =
                 calculatorUnderTest.calculateCosts(SINGLE_QUANTITY, DeliveryTimescale.STANDARD);
-        final List<ItemCosts> costs = calculation.getItemCosts();
+        final List<ItemCosts> costs = calculation.itemCosts();
 
         // Then
         assertThat(costs.size(), is(SINGLE_QUANTITY));
-        final ItemCosts cost = costs.get(0);
+        final ItemCosts cost = costs.getFirst();
         assertThat(cost.getItemCost(), is(STANDARD_INDIVIDUAL_CERTIFICATE_COST_STRING));
         assertThat(cost.getDiscountApplied(), is(NO_DISCOUNT));
         assertThat(cost.getCalculatedCost(), is(STANDARD_INDIVIDUAL_CERTIFICATE_COST_STRING));
         assertThat(cost.getProductType(), is(CERTIFICATE));
-        assertThat(calculation.getPostageCost(), is(POSTAGE_COST));
-        assertThat(calculation.getTotalItemCost(), is(calculateExpectedTotalItemCost(costs, POSTAGE_COST)));
+        assertThat(calculation.postageCost(), is(POSTAGE_COST));
+        assertThat(calculation.totalItemCost(), is(calculateExpectedTotalItemCost(costs, POSTAGE_COST)));
 
     }
 
@@ -63,7 +68,7 @@ class CertificateCostCalculatorServiceTest {
         // Given and when
         final CertificateCostCalculation calculation =
                 calculatorUnderTest.calculateCosts(MULTIPLE_QUANTITY, DeliveryTimescale.STANDARD);
-        final List<ItemCosts> costs = calculation.getItemCosts();
+        final List<ItemCosts> costs = calculation.itemCosts();
 
         // Then
         assertThat(costs.size(), is(MULTIPLE_QUANTITY));
@@ -82,8 +87,8 @@ class CertificateCostCalculatorServiceTest {
             assertThat(cost.getProductType(), is(expectedProductType));
         }
 
-        assertThat(calculation.getPostageCost(), is(POSTAGE_COST));
-        assertThat(calculation.getTotalItemCost(), is(calculateExpectedTotalItemCost(costs, POSTAGE_COST)));
+        assertThat(calculation.postageCost(), is(POSTAGE_COST));
+        assertThat(calculation.totalItemCost(), is(calculateExpectedTotalItemCost(costs, POSTAGE_COST)));
 
     }
 
@@ -94,17 +99,17 @@ class CertificateCostCalculatorServiceTest {
         // Given and when
         final CertificateCostCalculation calculation =
             calculatorUnderTest.calculateCosts(SINGLE_QUANTITY, DeliveryTimescale.SAME_DAY);
-        final List<ItemCosts> costs = calculation.getItemCosts();
+        final List<ItemCosts> costs = calculation.itemCosts();
 
         // Then
         assertThat(costs.size(), is(SINGLE_QUANTITY));
-        final ItemCosts cost = costs.get(0);
+        final ItemCosts cost = costs.getFirst();
         assertThat(cost.getItemCost(), is(SAME_DAY_INDIVIDUAL_CERTIFICATE_COST_STRING));
         assertThat(cost.getDiscountApplied(), is(NO_DISCOUNT));
         assertThat(cost.getCalculatedCost(), is(SAME_DAY_INDIVIDUAL_CERTIFICATE_COST_STRING));
         assertThat(cost.getProductType(), is(CERTIFICATE_SAME_DAY));
-        assertThat(calculation.getPostageCost(), is(POSTAGE_COST));
-        assertThat(calculation.getTotalItemCost(), is(calculateExpectedTotalItemCost(costs, POSTAGE_COST)));
+        assertThat(calculation.postageCost(), is(POSTAGE_COST));
+        assertThat(calculation.totalItemCost(), is(calculateExpectedTotalItemCost(costs, POSTAGE_COST)));
 
     }
 
@@ -115,7 +120,7 @@ class CertificateCostCalculatorServiceTest {
         // Given and when
         final CertificateCostCalculation calculation =
             calculatorUnderTest.calculateCosts(MULTIPLE_QUANTITY, DeliveryTimescale.SAME_DAY);
-        final List<ItemCosts> costs = calculation.getItemCosts();
+        final List<ItemCosts> costs = calculation.itemCosts();
 
         // Then
         assertThat(costs.size(), is(MULTIPLE_QUANTITY));
@@ -135,8 +140,8 @@ class CertificateCostCalculatorServiceTest {
             assertThat(cost.getProductType(), is(expectedProductType));
         }
 
-        assertThat(calculation.getPostageCost(), is(POSTAGE_COST));
-        assertThat(calculation.getTotalItemCost(), is(calculateExpectedTotalItemCost(costs, POSTAGE_COST)));
+        assertThat(calculation.postageCost(), is(POSTAGE_COST));
+        assertThat(calculation.totalItemCost(), is(calculateExpectedTotalItemCost(costs, POSTAGE_COST)));
 
     }
 
@@ -165,10 +170,10 @@ class CertificateCostCalculatorServiceTest {
      * @return the expected total item cost (as a String)
      */
     private String calculateExpectedTotalItemCost(final List<ItemCosts> costs, final String postageCost) {
-        final Integer total = costs.stream()
+        final int total = costs.stream()
                                .map(itemCosts -> Integer.parseInt(itemCosts.getCalculatedCost()))
                                .reduce(0, Integer::sum) + Integer.parseInt(postageCost);
-        return total.toString();
+        return Integer.toString(total);
     }
 
 }
